# DataAnalysisIntrotoProgramming

./: .gitignore  CMakeLists.txt  README.md
Python/: graph.py
Python/env/: pyvenv.cfg
Python/inspiration/Week5/: Exercise1.py  Exercise2.py  Exercise3.py  Exercise4.py  Exercise5.py
Vectorset/: Vectorset0.xml  results.xml
build-dir/: main
src/main/: analysedata.h  main.cpp  particle_classes.h  readandcalc.h  serialization.h
src/main/Inspiration/Homework/: Solar_activity.txt  Solarcycle  Solarcycle.cpp
src/main/Inspiration/Homework/Inaki/: solar_activity.txt  solar_cycle  solar_cycle.cpp
